--- a/src/app/main-page/theatre-list/theatre-list.component.html
+++ b/src/app/main-page/theatre-list/theatre-list.component.html
@@ -1,3 +1,4 @@
 <div>
   app-theatre-list
 </div>
+<p-paginator styleClass="to-bottom full-width" [totalRecords]="(facade.totalTheatres | async)!" [rows]="20" [rowsPerPageOptions]="[1, 5, 20, 50, 100]"></p-paginator>
