--- a/src/app/main-page/cinema-list/cinema-list.component.html
+++ b/src/app/main-page/cinema-list/cinema-list.component.html
@@ -1,2 +1,4 @@
-<p>cinema-list works!</p>
-<p-paginator styleClass="to-bottom full-width" [totalRecords]="(facade.totalCinemas | async)!" [rows]="20" [rowsPerPageOptions]="[1, 5, 20, 50, 100]"></p-paginator>
+<div style="height: calc(100% - 60px);overflow: scroll; display: flex; flex-direction: column;" >
+  <app-cinema-card *ngFor="let cinema of (facade.currentCinemaList | async)!" [cinema]="cinema" style="margin-top: 1rem"></app-cinema-card>
+</div>
+<p-paginator class="to-bottom full-width" style="z-index:100" (onPageChange)="pageChanged($event)" [totalRecords]="(facade.totalCinemas | async)!" [rows]="5" [rowsPerPageOptions]="[1, 5, 20, 50, 100]"></p-paginator>
